--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.4.5</version>
         <relativePath/>
     </parent>
-    <groupId>com.caozei</groupId>
+    <groupId>com.shenzhou</groupId>
     <artifactId>player</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>player</name>
