--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
   mvc:
     throw-exception-if-no-handler-found: true
+    static-path-pattern: /data/**
+  web:
+    resources:
+      static-locations: file:D:/迅雷下载
