--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
         </dependency>
 
         <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-native-osx64</artifactId>
+            <version>2.4.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
