更新了数据库

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,4 +16,4 @@ spring:
     static-path-pattern: /data/**
   web:
     resources:
-      static-locations: file:H:\电影\已归档
+      static-locations: file:F:\电影\
